# lotto-game

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
lotto/: __init__.py  cards.py  config.py  game.py  helpers.py  players.py
tests/: test_cards.py
